--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <script src="app/controllers/login.js"></script>
   <script src="app/controllers/navbar.js"></script>
   <script src="app/controllers/add_event.js"></script>
+  <script src="app/controllers/sports.js"></script>
+
+  <script src="app/filters/lisp-case.js"></script>
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="node_modules/angular-toastr/dist/angular-toastr.min.css">
@@ -27,7 +30,7 @@
 </head>
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container" ng-controller="NavbarCtrl">
+    <div class="container" ng-controller="NavbarController as vm">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
             aria-expanded="false" aria-controls="navbar">
@@ -40,15 +43,22 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
+          <li class="dropdown" uib-dropdown>
+            <a href uib-dropdown-toggle class="dropdown-toggle" data-toggle="dropdown" role="button"
+                aria-haspopup="true" aria-expanded="false">Deportes <span class="caret"></span></a>
+            <ul class="dropdown-menu" uib-dropdown-menu>
+              <li ng-repeat="sport in vm.sports">
+                <a href ui-sref="sports({sportId: sport.id})">{{ sport.name }}</a></li>
+            </ul>
+          </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="bg-success"><a class="text-success" ng-click="openLoginModal()" href="" ng-show="!isAuthenticated()">
-            Ingresar <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="bg-success"><a class="text-success" ng-click="openAddEventModal()" href="" ng-show="isAuthenticated()">
+          <li class="bg-success"><a class="text-success" ng-click="vm.openAddEventModal()" href=""
+              ng-show="vm.isAuthenticated()">
             Agregar Evento <span class="sr-only">(current)</span></a>
           </li>
-          <li class="bg-danger"><a class="text-danger" ng-click="logout()" href="" ng-show="isAuthenticated()">
+          <li class="bg-danger"><a class="text-danger" ng-click="vm.logout()" href=""
+              ng-show="vm.isAuthenticated()">
             Salir <span class="sr-only">(current)</span></a>
           </li>
         </ul>
