--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="app/controllers/navbar.js"></script>
   <script src="app/controllers/add_event.js"></script>
   <script src="app/controllers/sports.js"></script>
+  <script src="app/controllers/edit_event.js"></script>
 
   <script src="app/filters/lisp-case.js"></script>
 
