--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" ui-sref="feed">Trentos</a>
+        <a class="navbar-brand" ui-sref="feed" ng-if="vm.isAuthenticated()">Trentos</a>
+        <a class="navbar-brand" ui-sref="events" ng-if="!vm.isAuthenticated()">Trentos</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
@@ -88,6 +89,10 @@
         <ul class="nav navbar-nav navbar-right" ng-show="!vm.isAuthenticated()">
           <li class="bg-info"><a class="text-info" ng-click="vm.openRegisterModal()" href="">
             Registrate <span class="sr-only">(current)</span></a>
+        </ul>
+        <ul class="nav navbar-nav navbar-right" ng-show="!vm.isAuthenticated()">
+          <li class="bg-success"><a class="text-success" ng-click="vm.openLoginModal()" href="">
+            Ingresar <span class="sr-only">(current)</span></a>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
