--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
   <script src="app/filters/lisp-case.js"></script>
 
+  <script src="app/services/auth.js"></script>
+  <script src="app/services/events.js"></script>
+  <script src="app/services/user.js"></script>
+
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="node_modules/angular-toastr/dist/angular-toastr.min.css">
   <link rel="stylesheet" href="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
