Adds location to events

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script src="node_modules/chart.js/dist/Chart.min.js"></script>
   <script src="node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
   <script src="node_modules/angular-validation-match/dist/angular-validation-match.min.js"></script>
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyDri0xzgIeQ7Tifas6Xtc176-VqF0zcYI0"></script>
+  <script src="node_modules/ngmap/build/scripts/ng-map.min.js"></script>
 
   <script src="app/app.js"></script>
 
